--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "framer-motion": "11.3.31",
     "lucide-react": "0.460.0",
     "next": "14.2.12",
-    "nodemailer": "6.9.14",
+    "nodemailer": "^6.9.14",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "typescript": "5.6.2",
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/node": "24.7.2",
+    "@types/nodemailer": "^7.0.2",
     "@types/react": "19.2.2",
     "autoprefixer": "10.4.20",
     "postcss": "8.4.47",
