--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "framer-motion": "11.3.31",
     "lucide-react": "0.460.0",
     "next": "14.2.12",
