Improve AI widget fallbacks

--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,8 @@ SMTP_PASS=super-secret-password
 CONTACT_TO=you@example.com
 
 # Public contact links
-PUBLIC_WHATSAPP_NUMBER=6281234567890
-PUBLIC_EMAIL=you@example.com
+NEXT_PUBLIC_WHATSAPP_NUMBER=6281234567890
+NEXT_PUBLIC_PUBLIC_EMAIL=you@example.com
+
+# AI assistant (optional, required for live Gemini responses)
+GEMINI_API_KEY=your-gemini-api-key
