--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "ai": "^5.0.72",
     "framer-motion": "11.3.31",
     "lucide-react": "0.460.0",
     "next": "14.2.12",
@@ -17,7 +18,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "typescript": "5.6.2",
-    "zod": "3.23.8"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "24.7.2",
