--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "ai": "^5.0.72",
+    "date-fns": "^4.1.0",
     "framer-motion": "11.3.31",
+    "google-trends-api": "^4.9.2",
+    "gray-matter": "^4.0.3",
     "lucide-react": "0.460.0",
     "next": "14.2.12",
+    "next-mdx-remote": "^5.0.0",
     "nodemailer": "^6.9.14",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "rss-parser": "^3.13.0",
     "typescript": "5.6.2",
     "zod": "^4.1.12"
   },
