--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@vercel/analytics": "^1.5.0",
     "ai": "^5.0.72",
     "date-fns": "^4.1.0",
     "framer-motion": "11.3.31",
