--- a/package.json
+++ b/package.json
@@ -22,14 +22,16 @@
     "nodemailer": "^6.9.14",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-wrap-balancer": "^1.1.1",
     "rss-parser": "^3.13.0",
     "typescript": "5.6.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "24.7.2",
     "@types/nodemailer": "^7.0.2",
-    "@types/react": "19.2.2",
+    "@types/react": "18.3.3",
     "autoprefixer": "10.4.20",
     "postcss": "8.4.47",
     "tailwindcss": "3.4.13"
