--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ pnpm-debug.log*
 # package-lock.json
 # yarn.lock
 # pnpm-lock.yaml
+
+# next-sitemap
+/public/sitemap.xml
+/public/sitemap-*.xml
+/public/robots.txt
