--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -33,6 +34,7 @@
     "@types/nodemailer": "^7.0.2",
     "@types/react": "18.3.3",
     "autoprefixer": "10.4.20",
+    "next-sitemap": "^4.2.3",
     "postcss": "8.4.47",
     "tailwindcss": "3.4.13"
   }
